	  Xplained Pro.  Initial check is just an unverified, rough port of
	  the SAM4L Xplained Pro configuration (2014-2-12).
	* arch/arm/src/stm32/stm32_serial.c:  Fix cloned type:  FLOWCONTROL
	  vs FLOWCONROL (2014-2-14).
	* net/uip/uip_tcptimer.c: Back out a small part of the 6.33 write
	  buffering changed.  David G says that this causes problems in
	  connecting to a server (2014-2-15).
	* The basic SAMD20 Xplained Pro port is complete but still untested
	  (2014-2-16).
	* sched/task_terminate.c:  Always returns an error because the
	  return value was not being set correctly.  From Gosha (2014-2-18).
	* stm32f429i-disco/ostest-fpu:  OS test for FPU-enabled system from
	  David Alessio (2014-2-18).
	* Other misc changes to support FPU on STM32F429 Discovery from
	  David Alession (2014-2-18)
	* stm32f429i-disco/src:  Files renamed to make more consistent
	  with current board file naming conventions (2014-2-18).
	* stm32 SPI: Disable SPI before changing CR1 register.  From David
	  Sidrane (2014-2-18).
	* stm32 TIM: Set CCMR when selecting timer channerl.  From David
	  Sidrane (2014-2-18).
	* configs/spark: Board configuration updated by David Sidrane
	  (2014-2-19).
	* libc/stdio/lib_sscanf.c:  Bug fixes from David Sidrane (2014-2-18).
	* nuttx/drivers/wireless/cc3000 and nuttx/include/nuttx/wireless/cc3000:
	  Numerous updates to the CC3000 driver from David Sidrane (2014-2-18).
	* nuttx/configs/stm3240g-eval/webserver: Converted to use the
	  kconfig-frontends tools by Alan Carvalho de Assis (2014-2-18).
	* configs/mbed:  All mbed configurations have been converted to use
	  the kconfig-frontends tools (unverified) (2014-2-18).
	* fs/fs_opendir.c, fs_readdir.c, et al: Modified so that errors
	  will not be reported if you attempt to list a empty pseudo-directory
	  (2014-2-19).
	* fs/fs_rmdir.c: rmdir can be used to removed empty directories in
	  the pseudo-filesystem such as might be left after umounting a
	  file system (2014-2-19).
